Fixed whitespace

--- a/public/main.css
+++ b/public/main.css
@@ -236,7 +236,7 @@ li {
 
 @media (max-width:900px) {
   .bkgimage {
-    opacity: 0;
+    display: none;
   }
   #nav {
     display: none;
@@ -328,19 +328,13 @@ li {
   position: relative;
   border-style: solid;
   border-color: darkgray;
-  border-right-width: 1px;
-  border-left-width: 1px;
-  border-top-width: 0px;
-  border-bottom-width: 0px;
+  border-width: 0px;
   cursor: pointer;
 }
 
-.nav-item:nth-of-type(1) {
-  border-left-width: 0px;
-}
-
-.nav-item:nth-of-type(3) {
-  border-right-width: 0px;
+.middle-item {
+  border-right-width: 1px;
+  border-left-width: 1px;
 }
 
 .nav-item #pin {
