--- a/public/register.css
+++ b/public/register.css
@@ -109,3 +109,12 @@ button {
 button:hover {
   background-color: #52428a;
 }
+
+#groupregistration {
+  display: none;
+}
+
+
+#submitbutton {
+  opacity: 0.5;
+}
